--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,12 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Taco Cloud</title>
+    <meta charset="UTF-8">
 </head>
 
 <body>
     <h1>Welcome, zuijianren</h1>
     <img src="" th:src="@{/images/TacoCloud.png}" />
+    <h2><a href="/user/register">跳转注册页</a></h2>
 </body>
 </html>
